--- a/www/company.html
+++ b/www/company.html
@@ -45,7 +45,6 @@
         <a href="index.html" title="Main" class="b-menu__wrapp-logo col xs-2"></a>
         <ul class="b-menu__wrapp-list col xs-8">
           <li><a href="main.html" title="" class="text bold">Новости</a></li>
-          <li><a href="#" title="" class="text bold">Машины</a></li>
           <li><a href="community.html" title="" class="text bold">Сообщества</a></li>
           <li><a href="company.html" title="" class="text bold">Компании</a></li>
           <li><a href="#" title="" class="text bold">Барахолка</a></li>
@@ -70,12 +69,12 @@
           <img src="/img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
           <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
           <ul class="b-menu__wrapp-login-nav-list text">
-            <li><a href="#">Моя страница</a></li>
-            <li><a href="#">Блог</a></li>
-            <li><a href="#">Добавить авто</a></li>
-            <li><a href="#">Выход</a></li>
-            </ul>
-          </div>
+            <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
+            <li><a href="my-blog.html" class="b-menu__user-item m-menu__user-item_my-blog text">Блог</a></li>
+            <li><a href="add-my-car.html" class="b-menu__user-item m-menu__user-item_add-car text">Добавить авто</a></li>
+            <li><a href="/logout" class="b-menu__user-item m-menu__user-item_exit text">Выход</a></li>
+          </ul>
+        </div>
 
       </nav>
     </header>
@@ -98,10 +97,14 @@
     <main>
       <div class="wrapper">
       <!-- /Header -->
+
         <div class="row">
 
           <section class="l-company col xs-9">
             <div class="block b-company">
+              <div class="b-main-title">
+                <h3>Компании</h3>
+              </div>
               <div class="paginator">
                 <div class="b-company__container container">
 
@@ -109,68 +112,68 @@
                       <img src="/img/temp/auto/1.png" alt="">
                       <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
-                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link">Детальнее</a></p>
+                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/2.png" alt="">
                       <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
-                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link">Детальнее</a></p>
+                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                    <div class="b-company__item item">
                       <img src="/img/temp/auto/3.png" alt="">
                       <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
-                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link">Детальнее</a></p>
+                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/4.png" alt="">
                       <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
-                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link">Детальнее</a></p>
+                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/5.png" alt="">
                       <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
-                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link">Детальнее</a></p>
+                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/6.png" alt="">
                       <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
-                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link">Детальнее</a></p>
+                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/7.png" alt="">
                        <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
-                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link">Детальнее</a></p>
+                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/8.png" alt="">
                       <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
-                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link">Детальнее</a></p>
+                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/9.png" alt="">
                       <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
-                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link">Детальнее</a></p>
+                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/1.png" alt="">
                       <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
-                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link">Детальнее</a></p>
+                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a></p>
                     </div>
                     <div class="b-company__item item">
                       <img src="/img/temp/auto/2.png" alt="">
                       <h4><a href="#" class="b-company__item-name">Company 1</a></h4>
                       <a href="#" class="text b-company__item-sector">Мойки</a>
-                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link">Детальнее</a>
+                       <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolorem nostrum sapiente officiis accusantium nemo culpa aliquid aspernatur odio incidunt, soluta obcaecati quae. Deleniti eveniet nostrum aliquam, minus odit maiores.<a href="#" title="" class="link"></a>
                       </p>
                     </div>
 
@@ -196,7 +199,8 @@
           <section class="l-filter col xs-3">
             <div class="block b-filter">
               <div class="b-filter-wrapp">
-                <h3>Показать</h3>
+                <p class="text bold">Всего компаний: <span class="all-company">256</span></p>
+                <a href="#" class="text bold">Новых компаний: <span class="new-company">12</span></a>
                 <form class="b-filter__form" name="filter">
                   <div class="b-add-car__form-item droplist">
                     <input type="text" id="sector" value="all" hidden>
@@ -270,12 +274,19 @@
                       <li class="droplist-item text">Район</li>
                     </ul>
                   </div>
-
-                  <input type="submit" value="Найти" class="button middle tab-input">
+                  <p class="icon-search"><input type="submit" value="Найти" class="button middle tab-input"></p>
                 </form>
 
               </div>
             </div>
+            
+            <div class="block b-add-company">
+              <div class="b-add-company_wrapp">
+                <h5>Вы развивающася компания, стремящаяся стать ближе к своим клиентам, тогда присоединяйтесь к нашему сообществу!</h5>
+                <a href="add-company.html" title="" class="button middle add-button">Присоединиться</a>
+              </div>
+            </div>
+
           </section>
 
         </div>
