--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
       }
     </style>
 
+      <a href="style-page.html" title="">Style HTML</a><br />
       <a href="main.html" title="">Main HTML</a><br />
       <a href="my-page.html" title="">My home page HTML</a><br />
       <a href="add-my-car.html" title="">Add my car HTML</a><br />
@@ -43,6 +44,7 @@
       <!-- <a href="my-blog.html" title="">My blog page HTML</a><br /> -->
       <a href="add-blog.html" title="">ADD blog page HTML</a><br />
       <a href="company.html" title="">Company page HTML</a><br />
+      <a href="add-company.html" title="">Add company page HTML</a><br />
       <!-- <a href="testdrive.html" title="">Testdrive page HTML</a><br /> -->
 
   </body>
