--- a/www/add-company.html
+++ b/www/add-company.html
@@ -5,7 +5,8 @@
     <title>DRIVELAND</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scal
+    e=1, minimal-ui">
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="x-rim-auto-match" content="none">
     <!-- Favicon -->
@@ -21,11 +22,11 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/gird-column.css">
     <link rel="stylesheet" type="text/css" href="css/reset-min.css">
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles-general.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/slim.min.css">
-    <link rel="stylesheet" type="text/css" href="css/styles-droplist.css"> 
-    <link rel="stylesheet" type="text/css" href="css/styles-add-blog.css">
+    <link rel="stylesheet" type="text/css" href="css/styles-droplist.css">
+    <link rel="stylesheet" type="text/css" href="css/styles-add-company.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -98,83 +99,121 @@
       <!-- /Header -->
 
         <div class="row">
-          <section class="l-add-blog col xs-12">
-            <div class="block b-add-blog">
+
+          <section class="l-add-company col xs-12">
+            <div class="block b-add-company">
               <div class="b-main-title">
-                <h3>Добавить запись в блоге</h3>
+                <h3>Добавить компанию</h3>
               </div>
-              <form role="form" action="/user/addpost" method="POST" enctype="multipart/form-data" class="b-add-blog__form" name="add-blog">
+              <form role="form" action="/companies/addcompany" method="POST" enctype="multipart/form-data" class="b-add-company__form" name="add-company">
 
-              <div class="b-add-blog__form-item m-form-item-inline text">
-                <p class="b-form-item-title"><label for="title" class="text">Название поста</label></p>
-                <p><input type="text" id="title" name="title" class="tab-input"></p>
-              </div>
-
-              <div class="b-add-blog__form-item m-form-item-inline">
-                <span class="b-form-item-title text bold">Тэг</span>
-                <div class="droplist">
-                  <input type="text" id="tag" name="tag" value="" hidden>
-                  <span class="droplist-current text bold tab-input">Выбрать</span>
-                  <ul class="droplist-block">
-                    <li class="droplist-item text">Личное</li>
-                    <li class="droplist-item text">Хобби</li>
-                    <li class="droplist-item text">Путешествия</li>
-                  </ul>
+                <div class="b-add-company__form-item m-form-item-inline text">
+                  <p class="b-form-item-title"><label for="name" class="text">Название</label></p>
+                  <p><input type="text" id="name" name="name" class="tab-input"></p>
                 </div>
-              </div>
 
-               <div class="b-add-blog__form-item m-form-item-inline">
-                <p class="b-form-item-title"><label for="title" class="text">Фото обложки</label></p>
-                <div id="postMainPhotoSlim"
-                  data-label="Drop photo here"
-                  data-size="800,400"
-                  data-ratio="2:1"
-                  class="b-form-item-add-photo text">
-                  <input type="file" name="mainphoto" required />
-                </div>
-              </div>
-
-              <div class="b-add-blog__form-item m-form-item_textarea m-form-item-inline">
-                <p class="b-form-item-title text bold"><label>Краткое описание поста</label></p>
-                <p><textarea rows="4" cols="50" name="aboutme" class="text tab-input"></textarea></p>
-              </div>
-
-              <div id="postText" class="b-add-blog__form-item m-form-item_textarea m-form-item-inline" style="display: none;">
-                <p class="b-form-item-title text bold"><label>Текст поста</label></p>
-                 <p><textarea rows="6" cols="74" name="" class="text tab-input"></textarea></p>
-                <button type="button" class="b-form-item-button">Удалить блок</button>
-              </div>
-
-              <div id="postPhoto" style="display: none;">
-                <div class="b-add-blog__form-item m-form-item-inline">
-                  <p class="b-form-item-title"><label for="title" class="text">Добавить фото</label></p>
-                  <div class="postPhotoSlim b-form-item-add-photo text" 
+                <div class="b-add-company__form-item m-form-item-inline">
+                  <p class="b-form-item-title text bold"><label>Логотип компании</label></p>
+                  <div id="postMainPhotoSlim"
                     data-label="Drop photo here"
-                    data-size="600,300"
-                    data-ratio="2:1">
-                    <input type="file" name="slim[]" />
+                    data-size="800,400"
+                    data-ratio="2:1"
+                    class="b-form-item-add-photo text slim">
+                    <input type="file" name="mainphoto" required />
                   </div>
-                  <button type="button" class="b-form-item-button">Удалить фото</button>
                 </div>
-              </div>
-              
-              <div id="postContent"></div>
 
-              <div class="b-add__form-button">
-                <button type="button" id="addPostText" class="button middle">Добавить текст</button>
-                <button type="button" id="addPostPhoto" class="button middle">Добавить фото</button>
-              </div>
+                <div class="b-add-company__form-item m-form-item-inline">
+                  <div class="b-form-item-title text bold">Категория</div>
+                  <div class="droplist">
+                    <input type="text" name="category" id="category" value="" style="opacity: 0; width: 0;">
+                    <span class="droplist-current text bold tab-input">Выбрать</span>
+                    <ul class="droplist-block">
+                      <li class="droplist-item text">Cars</li>
+                      <li class="droplist-item text">Rims</li>
+                      <li class="droplist-item text">Tyres</li>
+                    </ul>
+                  </div>
+                </div>
 
+                <div class="b-add-company__form-item m-form-item_textarea m-form-item-inline">
+                  <p class="b-form-item-title text bold"><label>Краткое описание</label></p>
+                  <p><textarea rows="3" cols="50" id="shdescr" name="shdescr" class="text tab-input"></textarea></p>
+                </div>
+
+                <div class="b-add-company__form-item m-form-item-inline">
+                  <div class="b-form-item-title text bold">Город/Район</div>
+                  <div class="droplist">
+                    <input type="text" name="city" id="city" value="" style="opacity: 0; width: 0;">
+                    <span class="droplist-current text bold tab-input">Выбрать город</span>
+                    <ul class="droplist-block">
+                      <li class="droplist-item text">Kalamata</li>
+                      <li class="droplist-item text">Patra</li>
+                      <li class="droplist-item text">Athens</li>
+                    </ul>
+                  </div>
+                  <div class="droplist" hidden>
+                    <input type="text" name="district" id="district" value="" hidden>
+                    <span class="droplist-current text bold tab-input">Выбрать модель</span>
+                    <ul class="droplist-block">
+                      <li class="droplist-item text">Ilion</li>
+                      <li class="droplist-item text">Petroupoli</li>
+                      <li class="droplist-item text">Peristeri</li>
+                    </ul>
+                  </div>
+                </div>
+
+                <div class="b-add-company__form-item m-form-item-inline text">
+                  <p class="b-form-item-title"><label for="name" class="text">Адресс</label></p>
+                  <p><input type="text" id="address" name="address" class="tab-input"></p>
+                </div>
+
+                <div class="b-add-company__form-item m-form-item-inline text">
+                  <p class="b-form-item-title"><label for="name" class="text">Телефон</label></p>
+                  <p><input type="tel" id="phone" name="phone" class="tab-input"></p>
+                </div>
+
+                <div class="b-add-company__form-item m-form-item-inline text">
+                  <p class="b-form-item-title"><label for="name" class="text">Имейл</label></p>
+                  <p><input type="email" id="email" name="email" class="tab-input"></p>
+                </div>
+
+                <div class="b-add-company__form-item m-form-item_textarea m-form-item-inline">
+                  <p class="b-form-item-title text bold"><label>О компании</label></p>
+                  <p><textarea rows="6" cols="50" id="descr" name="descr" class="text tab-input"></textarea></p>
+                </div>
+
+                <div id="postPhoto" style="display: none;">
+                  <div class="b-add-blog__form-item m-form-item-inline">
+                    <p class="b-form-item-title"><label for="title" class="text">Добавить фото</label></p>
+                      <div class="postPhotoSlim b-form-item-add-photo text slim" 
+                        data-label="Drop photo here"
+                        data-size="600,300"
+                        data-ratio="2:1">
+                        <input type="file" name="slim[]" />
+                    </div>
+                    <button type="button" class="b-form-item-button">Удалить фото</button>
+                  </div>
+                </div>
+
+
+                <div id="postContent"></div>
+
+                <div class="b-add__form-button">
+                  <button type="button" id="addPostPhoto" class="button middle">Добавить фото</button>
+                </div>
 
                 <input type="submit" value="Опубликовать" class="button middle tab-input"></input>
-
               </form>
+
             </div>
+
           </section>
+
         </div>
       <script type="text/javascript" src="js/slim.jquery.min.js"></script>
       <script type="text/javascript" src="js/script-droplist.js"></script>
-      <script type="text/javascript" src="js/script-add-blog.js"></script>
+      <script type="text/javascript" src="js/script-add-company.js"></script>
 <!-- Footer -->
       </div>
     </main>
