--- a/www/edit-my-profile.html
+++ b/www/edit-my-profile.html
@@ -23,7 +23,6 @@
     <link rel="stylesheet" type="text/css" href="css/reset-min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="/resources/demos/style.css">
     <link rel="stylesheet" type="text/css" href="css/styles-general.css">
     <link rel="stylesheet" type="text/css" href="css/slim.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles-droplist.css">
@@ -46,15 +45,14 @@
       <nav class="b-menu__wrapp wrapper row row-center">
         <a href="index.html" title="Main" class="b-menu__wrapp-logo col xs-2"></a>
         <ul class="b-menu__wrapp-list col xs-8">
-          <li><a href="#" title="" class="text bold">Новости</a></li>
-          <li><a href="#" title="" class="text bold">Машины</a></li>
+          <li><a href="main.html" title="" class="text bold">Новости</a></li>
           <li><a href="community.html" title="" class="text bold">Сообщества</a></li>
           <li><a href="company.html" title="" class="text bold">Компании</a></li>
           <li><a href="#" title="" class="text bold">Барахолка</a></li>
         </ul>
 
         <!-- Попап входа -->
-        <button class="b-menu__wrapp-login button small text bold col xs-offset-1 xs-1">Войти</button>
+        <button class="b-menu__wrapp-login button small text bold col xs-offset-1 xs-1" style="display: none;">Войти</button>
         <div class="b-menu__wrapp-login-popup">
           <div class="b-menu__wrapp-login-popup-close"></div>
           <form action="/" method="POST" class="b-menu__wrapp-login-popup-enter">
@@ -66,10 +64,19 @@
             <a href="#" title="" class="text">Забыли пароль?</a>
           </form>
         </div>
-        <div class="b-menu__wrapp-login-nav" style="display: none;">
+
+      <!-- Меню пользователя -->
+        <div class="b-menu__wrapp-login-nav">
           <img src="/img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
           <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
+          <ul class="b-menu__wrapp-login-nav-list text">
+            <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
+            <li><a href="my-blog.html" class="b-menu__user-item m-menu__user-item_my-blog text">Блог</a></li>
+            <li><a href="add-my-car.html" class="b-menu__user-item m-menu__user-item_add-car text">Добавить авто</a></li>
+            <li><a href="/logout" class="b-menu__user-item m-menu__user-item_exit text">Выход</a></li>
+          </ul>
         </div>
+
       </nav>
     </header>
     <!-- Попап регистрации -->
@@ -95,7 +102,9 @@
         <div class="row">
           <section class="l-edit col xs-12">
             <div class="block b-edit">
-              
+              <div class="b-main-title">
+                <h3>Радактировать профиль</h3>
+              </div>
               <form role="form" action="aboutme" method="POST" class="b-edit__form" name="aboutme">
                 <div id="avatarContainer" class="text">
                   <input type="file" id="avatarSlim"/>
