--- a/www/testdrive.html
+++ b/www/testdrive.html
@@ -21,8 +21,8 @@
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/gird-column.css">
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/reset-min.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/paginator.css">
     <link rel="stylesheet" type="text/css" href="css/list-marks.css">
     <link rel="stylesheet" type="text/css" href="css/styles-general.css">
@@ -40,19 +40,19 @@
   </head>
   <body>
 
+
     <header class="l-menu">
       <nav class="b-menu__wrapp wrapper row row-center">
         <a href="index.html" title="Main" class="b-menu__wrapp-logo col xs-2"></a>
         <ul class="b-menu__wrapp-list col xs-8">
           <li><a href="main.html" title="" class="text bold">Новости</a></li>
-          <li><a href="#" title="" class="text bold">Машины</a></li>
           <li><a href="community.html" title="" class="text bold">Сообщества</a></li>
           <li><a href="company.html" title="" class="text bold">Компании</a></li>
           <li><a href="#" title="" class="text bold">Барахолка</a></li>
         </ul>
 
         <!-- Попап входа -->
-        <button class="b-menu__wrapp-login button small text bold col xs-offset-1 xs-1">Войти</button>
+        <button class="b-menu__wrapp-login button small text bold col xs-offset-1 xs-1" style="display: none;">Войти</button>
         <div class="b-menu__wrapp-login-popup">
           <div class="b-menu__wrapp-login-popup-close"></div>
           <form action="/" method="POST" class="b-menu__wrapp-login-popup-enter">
@@ -64,10 +64,19 @@
             <a href="#" title="" class="text">Забыли пароль?</a>
           </form>
         </div>
-        <div class="b-menu__wrapp-login-nav" style="display: none;">
+
+      <!-- Меню пользователя -->
+        <div class="b-menu__wrapp-login-nav">
           <img src="/img/temp/author/author-1.jpg" alt="" class="b-menu__wrapp-login-nav-photo">
           <p class="b-menu__wrapp-login-nav-name text">Leonidis Castonedis</p>
+          <ul class="b-menu__wrapp-login-nav-list text">
+            <li><a href="my-page.html" class="b-menu__user-item m-menu__user-item_my-page text">Моя страница</a></li>
+            <li><a href="my-blog.html" class="b-menu__user-item m-menu__user-item_my-blog text">Блог</a></li>
+            <li><a href="add-my-car.html" class="b-menu__user-item m-menu__user-item_add-car text">Добавить авто</a></li>
+            <li><a href="/logout" class="b-menu__user-item m-menu__user-item_exit text">Выход</a></li>
+          </ul>
         </div>
+
       </nav>
     </header>
     <!-- Попап регистрации -->
